// This file listes the protobuffer messages used in the example to make a simple uart communcation protocol to a desktop/laptop PC.
// Commands are send from the desktop to the microctontroller which in turn sends the reply types below.

syntax = "proto3";

import "shared/firmware.proto";
import "lora_device_messages.proto";

option csharp_namespace = "LoRa";

message LoraMeasurement 
{
    uint32 Size = 1;
    int32 Rssi = 2;
    int32 Snr = 3;
    uint32 SequenceNumber = 4;
    optional bool IsMeasurementFragment = 5;
    bool Success = 6;
    LoRaMessage DownlinkPayload = 7;
}

message AckMessage {
    uint32 Code = 1;
}

message ExceptionMessage {
    uint32 Code = 1;
}

message DebugMessage {
    uint32 Code = 1;
}

// The main message container
message UartResponse {
    bytes Payload = 1;
    
    oneof Body {
        BootMessage bootMessage = 2;
        AckMessage ackMessage = 3;
        LoraMeasurement loraMeasurement = 4;
        DebugMessage debugMessage = 5;
        ExceptionMessage exceptionMessage = 6;
        DecodingResult decodingResult = 7;
        DecodingUpdate decodingUpdate = 8; // Debugging ACK
    }
}
